Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-36522

QtWebKit crashes on pro-linux.de

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.3.0
    • 5.2.0
    • GUI: Font handling, WebKit
    • None
    • Debian x64
      Qt 5.2.1RC configured with -system-harfbuzz
    • f34e0800630df74c77e9038572691bcf9420df78

    Description

      Going to pro-linux.de causes a crash in the Harfbuzz-ng code. This even on gerrit stable with the patch for QTBUG-36099 applied.

      pure virtual method called
      terminate called without an active exception

      Program received signal SIGABRT, Aborted.
      0x00007fffea866295 in __GI_raise (sig=sig@entry=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:56
      56 ../nptl/sysdeps/unix/sysv/linux/raise.c: No such file or directory.
      (gdb) bt
      #0 0x00007fffea866295 in __GI_raise (sig=sig@entry=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:56
      #1 0x00007fffea869438 in __GI_abort () at abort.c:90
      #2 0x00007fffeb153c8d in _gnu_cxx::_verbose_terminate_handler() () from /usr/lib/x86_64-linux-gnu/libstdc++.so.6
      #3 0x00007fffeb151cf6 in ?? () from /usr/lib/x86_64-linux-gnu/libstdc++.so.6
      #4 0x00007fffeb151d41 in std::terminate() () from /usr/lib/x86_64-linux-gnu/libstdc++.so.6
      #5 0x00007fffeb15280f in __cxa_pure_virtual () from /usr/lib/x86_64-linux-gnu/libstdc++.so.6
      #6 0x00007fffec2e5aae in QTextEngine::shapeText (this=this@entry=0x99d1f0, item=item@entry=1) at text/qtextengine.cpp:928
      #7 0x00007fffec2e64d5 in QTextEngine::shape (this=this@entry=0x99d1f0, item=item@entry=1) at text/qtextengine.cpp:1403
      #8 0x00007fffec2eb59d in QTextEngine::shapeLine (this=0x99d1f0, line=...) at text/qtextengine.cpp:857
      #9 0x00007fffec2f69c8 in QTextLine::cursorToX (this=this@entry=0x7fffffffae70, cursorPos=cursorPos@entry=0x7fffffffae38,
      edge=edge@entry=QTextLine::Leading) at text/qtextlayout.cpp:2589
      #10 0x00007ffff5a25eda in cursorToX (edge=QTextLine::Leading, cursorPos=0, this=0x7fffffffae70)
      at /src/qt5/qtbase/include/QtGui/../../src/gui/text/qtextlayout.h:233
      #11 WebCore::Font::floatWidthForComplexText (this=this@entry=0x7fff5e428eb0, run=...)
      at /src/webkit-qt5x2/Source/WebCore/platform/graphics/qt/FontQt.cpp:203
      #12 0x00007ffff5a06a01 in WebCore::Font::width (this=this@entry=0x7fff5e428eb0, run=..., fallbackFonts=fallbackFonts@entry=0x7fffffffb1a0,
      glyphOverflow=<optimized out>, glyphOverflow@entry=0x7fffffffb180) at /src/webkit-qt5x2/Source/WebCore/platform/graphics/Font.cpp:311
      #13 0x00007ffff5c0e264 in widthFromCache (glyphOverflow=0x7fffffffb180, fallbackFonts=0x7fffffffb1a0, xPos=5, len=5, start=1, f=..., this=0x7fff6b502f50)
      at /src/webkit-qt5x2/Source/WebCore/rendering/RenderText.cpp:769
      #14 WebCore::RenderText::computePreferredLogicalWidths (this=this@entry=0x7fff6b502f50, leadWidth=0, fallbackFonts=..., glyphOverflow=...)
      at /src/webkit-qt5x2/Source/WebCore/rendering/RenderText.cpp:1064
      #15 0x00007ffff5c0fc52 in WebCore::RenderText::computePreferredLogicalWidths (this=0x7fff6b502f50, leadWidth=<optimized out>)
      at /src/webkit-qt5x2/Source/WebCore/rendering/RenderText.cpp:886
      #16 0x00007ffff5c0a6fe in WebCore::RenderText::trimmedPrefWidths (this=this@entry=0x7fff6b502f50, leadWidth=leadWidth@entry=0,
      beginMinW=@0x7fffffffb358: 41, beginWS=@0x7fffffffb34e: false, endMinW=@0x7fffffffb35c: 41, endWS=@0x7fffffffb34f: false,
      hasBreakableChar=@0x7fffffffb34c: true, hasBreak=@0x7fffffffb34d: false, beginMaxW=@0x7fffffffb360: 1.22077359e+36, endMaxW=@0x7fffffffb390: 0,
      minW=@0x7fffffffb350: 0, maxW=@0x7fffffffb354: 0, stripFrontSpaces=@0x7fffffffb34b: true)
      at /src/webkit-qt5x2/Source/WebCore/rendering/RenderText.cpp:784
      #17 0x00007ffff5aece91 in WebCore::RenderBlock::computeInlinePreferredLogicalWidths (this=this@entry=0x7fff6b502ea0, minLogicalWidth=...,
      maxLogicalWidth=...) at /src/webkit-qt5x2/Source/WebCore/rendering/RenderBlock.cpp:6304
      #18 0x00007ffff5aedda6 in WebCore::RenderBlock::computeIntrinsicLogicalWidths (this=0x7fff6b502ea0, minLogicalWidth=..., maxLogicalWidth=...)
      at /src/webkit-qt5x2/Source/WebCore/rendering/RenderBlock.cpp:5924
      #19 0x00007ffff5adda87 in WebCore::RenderBlock::computePreferredLogicalWidths (this=0x7fff6b502ea0)
      at /src/webkit-qt5x2/Source/WebCore/rendering/RenderBlock.cpp:5961
      #20 0x00007ffff5b19763 in WebCore::RenderBox::minPreferredLogicalWidth (this=0x7fff6b502ea0)
      at /src/webkit-qt5x2/Source/WebCore/rendering/RenderBox.cpp:861
      #21 0x00007ffff5ae70ad in WebCore::RenderBlock::computeBlockPreferredLogicalWidths (this=0x7fff6b502de0, minLogicalWidth=..., maxLogicalWidth=...)
      at /src/webkit-qt5x2/Source/WebCore/rendering/RenderBlock.cpp:6460
      #22 0x00007ffff5aedf05 in WebCore::RenderBlock::computeIntrinsicLogicalWidths (this=0x7fff6b502de0, minLogicalWidth=..., maxLogicalWidth=...)
      at /src/webkit-qt5x2/Source/WebCore/rendering/RenderBlock.cpp:5926
      #23 0x00007ffff5adda87 in WebCore::RenderBlock::computePreferredLogicalWidths (this=0x7fff6b502de0)
      at /src/webkit-qt5x2/Source/WebCore/rendering/RenderBlock.cpp:5961
      #24 0x00007ffff5b19763 in WebCore::RenderBox::minPreferredLogicalWidth (this=0x7fff6b502de0)
      at /src/webkit-qt5x2/Source/WebCore/rendering/RenderBox.cpp:861
      #25 0x00007ffff5ae70ad in WebCore::RenderBlock::computeBlockPreferredLogicalWidths (this=0x7fff6b522a90, minLogicalWidth=..., maxLogicalWidth=...)

      Attachments

        Issue Links

          Activity

            People

              ritt.ks Konstantin Ritt
              allan.jensen Allan Sandfeld Jensen
              Votes:
              1 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: