Fix access after delete with Harfbuzz NG code path.

Remove reference to released font-engine so we don't risk returning it
later.

Change-Id: I741a741567a079818c7f414ac1f9c0b5a9677322
Task-number: QTBUG-36522
Reviewed-by: Konstantin Ritt <ritt.ks@gmail.com>

cregit: f34e0800630df74c77e9038572691bcf9420df78 https://github.com/qt/qtbase/commit/f34e0800630df74c77e9038572691bcf9420df78